# gate

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pay-gate.example.yaml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: acceptance.yml  bump-version.yml  ci.yml  release.yml
acceptance/: mock-facilitator.ts  mock-origin.ts  package-lock.json  package.json  setup.ts  tsconfig.json
acceptance/configs/: block.yaml  fail-open.yaml  live.yaml  passthrough.yaml
acceptance/tests/: gate-block.test.ts  gate-config.test.ts  gate-failopen.test.ts  gate-live.test.ts  gate-v2-wire.test.ts  gate.test.ts
bench/: k6-throughput.js
create-pay-gate/: package-lock.json  package.json  tsconfig.json
create-pay-gate/src/: index.ts
create-pay-gate/template/: tsconfig.json
create-pay-gate/template/src/: config.ts  heartbeat.ts  index.ts  response.ts  types.ts  validate.ts  verify.ts
examples/: Caddyfile  envoy.yml  gate.js  nginx.conf  openresty.conf
helm/pay-gate/: Chart.yaml  values.yaml
helm/pay-gate/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
rust/: Cargo.toml  LICENSE
rust/benches/: gate_hot_path.rs  route_matching.rs
rust/src/: config.rs  error.rs  gate.rs  health.rs  heartbeat.rs  lib.rs  main.rs  manifest.rs  proxy.rs  rate_limit.rs  response.rs  routes.rs  sidecar.rs  validate.rs  verify.rs
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: config.ts  gate.ts  heartbeat.ts  index.ts  response.ts  types.ts  verify.ts
