[package]
name = "pay-gate"
version = "0.1.0"
edition = "2021"
description = "x402 payment gateway — reverse proxy with Pay facilitator"
repository = "https://github.com/remit-md/gate"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }
governor = "0.8"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
nonzero_ext = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gate_hot_path"
harness = false

[[bench]]
name = "route_matching"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
