[package]
name = "pay-gate"
version = "0.1.0"
edition = "2021"
description = "x402 payment gateway — reverse proxy with Pay facilitator"
repository = "https://github.com/pay-skill/gate"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.13", features = ["json"] }
governor = "0.10"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
nonzero_ext = "0.3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/pay-gate-{ target-family }-{ target-arch }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides]
x86_64-unknown-linux-gnu = { pkg-url = "{ repo }/releases/download/v{ version }/pay-gate-linux-amd64" }
aarch64-unknown-linux-gnu = { pkg-url = "{ repo }/releases/download/v{ version }/pay-gate-linux-arm64" }
x86_64-apple-darwin = { pkg-url = "{ repo }/releases/download/v{ version }/pay-gate-macos-amd64" }
aarch64-apple-darwin = { pkg-url = "{ repo }/releases/download/v{ version }/pay-gate-macos-arm64" }
x86_64-pc-windows-msvc = { pkg-url = "{ repo }/releases/download/v{ version }/pay-gate-windows-amd64.exe" }

[profile.release]
strip = true
lto = true
codegen-units = 1
